<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lakshminarayanabr.triviaquiz.MainActivity"
    android:contextClickable="false"
    android:id="@+id/relativeLayoutMain">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/string_WelcomeHeading"
        android:id="@+id/textViewHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:maxLines="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Quit"
        android:id="@+id/buttonQuit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_StartTrivia"
        android:id="@+id/buttonStartTrivia"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarLoading"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/textViewHeading"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_LoadingMessage"
        android:id="@+id/textViewLoadingMessage"
        android:layout_below="@id/progressBarLoading"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
         />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ImgTrivia"
        android:layout_alignBottom="@+id/textViewLoadingMessage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/trivia" />
</RelativeLayout>
